--- a/checkout.html
+++ b/checkout.html
@@ -140,6 +140,21 @@
                                     <span class="text-lg font-semibold">应付总额</span>
                                     <span id="checkout-total" class="text-2xl font-bold text-blue-600">¥ 0.00</span>
                                 </div>
+                                <div class="flex justify-between items-center mt-2">
+                                    <span class="text-sm text-slate-600">预计货期</span>
+                                    <span class="text-sm font-medium text-slate-800">3天</span>
+                                </div>
+                                </div>
+                                <div class="flex justify-between items-center mt-2">
+                                    <span class="text-sm text-slate-600">预计货期</span>
+                                    <span class="text-sm font-medium text-slate-800">3天</span>
+                                </div>
+                                </div>
+                                <div class="flex justify-between items-center mt-2">
+                                    <span class="text-sm text-slate-600">预计货期</span>
+                                    <span class="text-sm font-medium text-slate-800">3天</span>
+                                </div>
+                                </div>
                                 <button onclick="handlePayment()"
                                     class="mt-6 w-full btn-primary text-white px-8 py-3 rounded-lg font-bold text-base transition-all">
                                     提交订单并支付
